# xiaozhi1.0.1

./: AGENTS.md  CMakeLists.txt  partitions.csv  sdkconfig.defaults
.codex/skills/gen-changelog/: SKILL.md
.codex/skills/gen-changelog/output/: 052017.md  052111.md  052210.md  052216.md  052315.md  052511.md  052518.md  052610.md  052611.md  052617.md  052710.md  052711.md  052817.md  current-change-note.md  current-code-change-note-20260520.md  current-usart-audio-change-note.md  mp3-spiffs-command-change-note.md  sd-card-sdmmc-example-code-note.md  sd-card-sdspi-example-code-note.md  sd-test-io-code-note.md  station-example-main-code-note.md  voice-recognition-state-refactor-note.md
main/: CMakeLists.txt  idf_component.yml  main.c  ota.c  ota.h
main/app/: app_MP3_download.c  app_MP3_download.h  app_sr_handler.c  app_sr_handler.h  app_usart_protocol.c  app_usart_protocol.h
main/audio/: audio_decode.c  audio_decode.h  audio_encode.c  audio_encode.h  audio_init.c  audio_init.h  audio_mp3_decode.c  audio_mp3_decode.h  audio_offline_sr_handler.c  audio_offline_sr_handler.h  audio_offlline_sr_handler.c  audio_online_sr_handle.c  audio_online_sr_handle.h  audio_sr.c  audio_sr.h  audio_sr_handler.c  audio_sr_handler.h
main/bsp/: bsp_esp32s3.c  bsp_esp32s3.h  bsp_http.c  bsp_http.h  bsp_mutable_buffer.c  bsp_mutable_buffer.h  bsp_nvs.c  bsp_nvs.h  bsp_sdcard.c  bsp_sdcard.h  bsp_usart.c  bsp_usart.h  bsp_wifi.c  bsp_wifi.h  bsp_ws.c  bsp_ws.h
main/com/: com_debug.c  com_debug.h  com_status.c  com_status.h  command_word.c  command_word.h
main/common/: common_debug.c  common_debug.h
main/usart/: usart_init.c  usart_init.h
pipeline_play_embed_music/main/: idf_component.yml
