idf_component_register(SRCS "main.c"
                    "com/com_status.c"
                    "audio/audio_init.c"
                    "audio/audio_sr.c"
                    "audio/audio_sr_handler.c"
                    "com/command_word.c"
                    "usart/usart_init.c"
                    INCLUDE_DIRS "."
                                "com"
                                "audio"
                    EMBED_TXTFILES "../managed_components/espressif__esp-sr/model/multinet_model/fst/commands_cn.txt"
                    )
