idf_component_register(SRCS "main.c"
                    "ota.c"
                    "com/com_status.c"
                    "app/app_MP3_download.c"
                    "app/app_usart_protocol.c"
                    "audio/audio_init.c"
                    "audio/audio_sr.c"
                    "audio/audio_offlline_sr_handler.c"
                    "audio/audio_online_sr_handle.c"
                    "audio/audio_mp3_decode.c"
                    "audio/audio_encode.c"
                    "audio/audio_decode.c"
                    "com/command_word.c"
                    "com/com_debug.c"
                    "bsp/bsp_usart.c"
                    "bsp/bsp_sdcard.c"
                    "bsp/bsp_wifi.c"
                    INCLUDE_DIRS "."
                                "app"
                                "com"
                                "audio"
                                "bsp"
                    EMBED_TXTFILES "../managed_components/espressif__esp-sr/model/multinet_model/fst/commands_cn.txt"
                    )
spiffs_create_partition_image(mp3 ./asset FLASH_IN_PROJECT)

